tests/invalid/invalid-010.inox
Module Invalid010

Main() :
    var X := "abc"
    X := 10
;
